2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
	* Follow-up to bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error

2010-09-27  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed unit tests #15802: t3lib_iconWorksTest fails some tests since fix in #15110 (Thanks to Philipp Gampe)

2010-09-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Follow-up to bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue

2010-09-26  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Fixed bug #9892: Extbase: broke switchableControllerAndActions (due to a merge failure of Extbase trunk into the Core)

2010-09-25  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Follow-up to bug #15430: htmlArea RTE: Text not editable after pasting with server-based cleaning
	* Fixed bug #15797: htmlArea RTE: Problem in Firefox inserting non-breaking space with Insert Special Character dialogue
	* Fixed bug #15749: htmlArea RTE: Firefox shows &amp; in external links with query string
	* Fixed bug #15512: htmlArea RTE: Initialization in flexforms broken with TYPO3 4.4
	* Follow-up to bug #15622: t3lib_TCEforms_inline registers superfluous nested level when renderFieldsOnly is set

2010-09-25  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15748: BE input validation "time" rejects 0:00 and 24:00 (Thanks to Lars Peipmann)

2010-09-24  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #15792: List view page browser: navigating to last page doesn't work
	* Fixed bug #15373: Page browser single table list view: Entering page number doesn't work
	* Fixed bug #15485: username in sys_lockedrecords to short (Thanks to Peter Russ)
	* Fixed bug #15462: Wrong order of quote and escape in LIKE DB clause (Thanks to Marcus Krause)