@@ -1,0 +1,6 @@
+<?php
+
+return array(
+	'tx_rtehtmlarea_statusreport_conflictscheck' => t3lib_extMgm::extPath('rtehtmlarea') . 'hooks/statusreport/conflictscheck.php',
+);
+?>
