@@ -1,0 +1,16 @@
+<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
+<T3locallang>
+	<meta type="array">
+		<generator>htmlArea RTE Status Report</generator>
+		<type>module</type>
+		<description>Check whether any conflicting extension is installed</description>
+	</meta>
+	<data type="array">
+		<languageKey index="default" type="array">
+			<label index="title">Conflicting extensions installed</label>
+			<label index="none">None</label>
+			<label index="keys">Extension keys:</label>
+			<label index="uninstall">Conflicting extensions should be uninstalled for htmlArea RTE to function correctly.</label>
+		</languageKey>
+	</data>
+</T3locallang>
