@@ -1,6 +1,7 @@
 2010-09-27  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
+	* Fixed bug #15339: htmlArea RTE: tkr_rteanchors breaks the link editing dialogue
 
 2010-09-26  Stanislas Rolland  <typo3@sjbr.ca>
 
