@@ -2,6 +2,7 @@
 
 	* Fixed bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
 	* Follow-up to bug #15820: htmlArea RTE: Failure to install AllowClipboard Helper extension raises js error
+	* Fixed bug #15339: htmlArea RTE: tkr_rteanchors breaks the link editing dialogue
 
 2010-09-27  Ernesto Baschny  <ernst@cron-it.de>
 
